test/should-fail/vsgc1912.f3
/**
 * Should-fail regression test: VSGC-1912 : Check that 'abstract' goes with empty function body
 *
 * @test/compile-error
 */

abstract class Foo {
   abstract function bar() : String { "Here I am" }
}
